--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,13 +9,14 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 
     properties:
       hibernate:
         default_batch_fetch_size: 100
         show_sql: true
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL57Dialect
 
     open-in-view: false
 
