--- a/build.gradle
+++ b/build.gradle
@@ -123,7 +123,8 @@ jacocoTestReport {
 							'**/*Application*',
 							"**/config/**",
 							"**/exception/**",
-							"**/dto/**"
+							"**/dto/**",
+							"**/Q*/**"
 					])
 				})
 		)
