--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,11 +46,16 @@ jobs:
           target: "./"
 
 
-      - name: Docker image build
-        run: docker build -t ${{ secrets.DOCKER_NAME }}/we-share-wish-hair:latest .
+      - name: ubuntu Docker image build
+        run: docker build -t ${{ secrets.DOCKER_NAME }}/we-share-wish-hair:latest -f Dockerfile-server .
 
-      - name: docker Hub 푸쉬
+      - name: Redis Docker image build
+        run: docker build -t ${{ secrets.DOCKER_NAME }}/we-share-wish-hair:redis -f Dockerfile-redis .
+
+      - name: ubuntu docker Hub 푸쉬
         run: docker push ${{ secrets.DOCKER_NAME }}/we-share-wish-hair:latest
+      - name: Redis docker Hub 푸쉬
+        run: docker push ${{ secrets.DOCKER_NAME }}/we-share-wish-hair:redis
 
       - name: Deploy with push
         uses: appleboy/ssh-action@v1.0.0
@@ -61,10 +66,13 @@ jobs:
           port: ${{ secrets.PORT }}
           # 이미 멈춰있어서 발생하는 예외를 방지하기 위해 || true 설정
           script: |
-            sudo docker stop we-share-wish-hair || true 
+            sudo docker stop we-share-wish-hair || true
+            sudo docker stop wswh-redis || true
             sudo docker container prune -f 
             sudo docker pull ${{ secrets.DOCKER_NAME }}/we-share-wish-hair:latest
             sudo docker run -d --log-driver=syslog --env-file .env \
             -p 8080:8080 --name we-share-wish-hair \
             ${{ secrets.DOCKER_NAME }}/we-share-wish-hair:latest
+            sudo docker pull ${{ secrets.DOCKER_NAME }}/we-share-wish-hair:redis
+            sudo docker run -d -p 6379:6379 --name wswh-redis ${{ secrets.DOCKER_NAME }}/we-share-wish-hair:redis
             
