--- a/Dockerfile-server
+++ b/Dockerfile-server
@@ -1,4 +1,4 @@
 FROM openjdk:17-alpine
 ARG JAR_PATH=build/libs/*.jar
 COPY ${JAR_PATH} /home/server.jar
-ENTRYPOINT ["java","-jar","/home/server.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar","/home/server.jar"]
