--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,6 +2,12 @@ server:
   port: 8080
 
 spring:
+  data:
+    redis:
+      host: 13.59.136.85
+      port: 6379
+      expire-time: 21600000
+
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:test_db;MODE=MySQL;
