--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 	//P6Spy
 	implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0")
 
-	//javax.annotation import 버그 해결
+	//javax.annotation
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
 	//jwt
@@ -43,23 +43,18 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'javax.xml.bind:jaxb-api:2.3.0' //jwt 토큰 생성시 에러 해결
 
-	//test
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
 	//JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	//spring
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
-	//validation
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
 	//mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-
-	//thymeleaf
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
 	//lombok
 	compileOnly 'org.projectlombok:lombok'
@@ -78,14 +73,14 @@ dependencies {
 	//네이버 클라우드
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
-	//Spring Security
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-
 	// queryDSL
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	//swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 }
 
 def querydslDir = "src/main/generated"
