enhancement: 테스트 환경 TestContainer 로 설정

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,11 @@ dependencies {
 	implementation('it.ozimov:embedded-redis:0.7.2')
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	//테스트
+	testImplementation "org.testcontainers:testcontainers:1.19.2"
+	testImplementation "org.testcontainers:junit-jupiter:1.19.2"
+	testImplementation "org.testcontainers:mysql:1.19.2"
+
 	//네이버 클라우드
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
