--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,9 @@ services:
   server:
     image: openjdk:17-alpine
     restart: always
-    env_file:
-      - .env
     volumes:
       - ./build/libs:/home
-    command: ["java", "-jar",
-              "-Dspring.profiles.active=prod",
-              "/home/advanced-we-share-wish-hair-0.0.1-SNAPSHOT.jar"]
+    command: ["java", "-jar", "-Dspring.profiles.active=prod", "/home/advanced-we-share-wish-hair-0.0.1-SNAPSHOT.jar"]
     ports:
       - '8080:8080'
     platform: linux/amd64
